--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <hr>
 
 
-
+<div class='hero-monster'>
     <div class="hero">
         <button class="move1">Slash</button>
         <button class="move2">Cross-slash</button>
@@ -40,7 +40,7 @@
         <img class="randomMonster" src="" >
         
     </section>
-
+</div>
     
 
 </body>
