--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Final Fantasy Arena</title>
+   
 </head>
 <body>
+
+  
 
     <header>Final Fantasy Arena</header>
    <hr> 
@@ -31,8 +34,8 @@
     </div>
 
     <div id="buttons">
-        <button class="move1">Slash</button>
-        <button class="move2">Cross-slash</button>
+        <button class="move1">higher damage</button>
+        <button class="move2">lower damage</button>
     </div>
 
 
