--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </div>
 
     <div id="buttons">
-        <button class="move1">higher damage</button>
-        <button class="move2">lower damage</button>
+        <button class="move1">Cross-slash</button>
+        <button class="move2">Slash</button>
     </div>
 
 
