adding new features

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div id="buttons">
         <button class="move1">Cross-slash</button>
         <button class="move2">Slash</button>
+        <button class="potion"></button>
     </div>
 
 
