--- a/index.html
+++ b/index.html
@@ -6,22 +6,19 @@
     <script defer src="app.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+   
     <title>Final Fantasy Arena</title>
    
 </head>
 <body>
-
-  
-
+    <audio src="./ffbattle.mp3" loop="loop" id ="music"></audio>
+    <audio src="./fanfare.mp3" loop ="loop" id ="victoryMusic"></audio>
+    <audio src="./gameover.mp3" id="gameover"></audio>
     <header>Final Fantasy Arena</header>
    <hr> 
 
    </div>
-   
-
-    <hr>
-
-
+   <hr>
 <div class='hero-monster'>
     <div class="hero">
        
@@ -36,7 +33,7 @@
     <div id="buttons">
         <button class="move1">Cross-slash</button>
         <button class="move2">Slash</button>
-        <button class="potion"></button>
+        <button class="potion">potion(0)</button>
     </div>
 
 
