--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script defer src="app.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
    
     <title>Final Fantasy Arena</title>
    
